# ghost-swap-adapter

./: Cargo.toml  README.md
.cargo/: config
artifacts/: checksums.txt
src/: contract.rs  lib.rs  msg.rs
