[package]
name = "swap-adapter"
version = "1.0.0"
authors = ["Amit Prasad <mail@amitprasad.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
kujira = "0.8"
cosmwasm-std = "1.2"
cosmwasm-schema = "1.2"
cw-storage-plus = "1.2"
cw-utils = "1.0"
cw2 = "1.0"
thiserror = "1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true